--- a/src/campaign.html
+++ b/src/campaign.html
@@ -42,7 +42,7 @@
 </head>
 
 <body>
-  <header class="no-page__header header">
+  <header class="header">
     <!--SP-hamburger-header-->
     <div class="header__inner">
       <a href="index.html" class="header__logo"><img src="./assets/images/common/logo.png" alt="コードアップスのロゴ" /></a>
@@ -195,7 +195,7 @@
     <section class="campaign campaign-wrapper">
       <div class="campaign__inner inner">
         <div class="campaign__tabs tabs">
-          <a href="#" class="tabs__item tab">ALL</a>
+          <a href="#" class="tabs__item tab js-active">ALL</a>
           <a href="#" class="tabs__item tab">ライセンス講習</a>
           <a href="#" class="tabs__item tab">ファンダイビング</a>
           <a href="#" class="tabs__item tab">体験ダイビング</a>
