--- a/src/contact-FAQ.html
+++ b/src/contact-FAQ.html
@@ -193,7 +193,7 @@
       <div class="contact-faq__inner inner">
         <div class="contact-faq__wrapper faq-wrapper">
 
-          <div class="contact-faq__faq faq-wrapper__item faq">
+          <div class="faq-wrapper__item faq">
             <div class="faq__question open">
               <h2>ここに質問が入ります。</h2>
             </div>
@@ -203,7 +203,7 @@
               </p>
             </div>
           </div>
-          <div class="contact-faq__faq faq-wrapper__item faq">
+          <div class="faq-wrapper__item faq">
             <div class="faq__question open">
               <h2>ここに質問が入ります。</h2>
             </div>
@@ -213,7 +213,7 @@
               </p>
             </div>
           </div>
-          <div class="contact-faq__faq faq-wrapper__item faq">
+          <div class="faq-wrapper__item faq">
             <div class="faq__question open">
               <h2>ここに質問が入ります。</h2>
             </div>
@@ -223,7 +223,7 @@
               </p>
             </div>
           </div>
-          <div class="contact-faq__faq faq-wrapper__item faq">
+          <div class="faq-wrapper__item faq">
             <div class="faq__question open">
               <h2>ここに質問が入ります。</h2>
             </div>
@@ -233,7 +233,7 @@
               </p>
             </div>
           </div>
-          <div class="contact-faq__faq faq-wrapper__item faq">
+          <div class="faq-wrapper__item faq">
             <div class="faq__question open">
               <h2>ここに質問が入ります。</h2>
             </div>
@@ -243,7 +243,7 @@
               </p>
             </div>
           </div>
-          <div class="contact-faq__faq faq-wrapper__item faq">
+          <div class="faq-wrapper__item faq">
             <div class="faq__question open">
               <h2>ここに質問が入ります。</h2>
             </div>
@@ -253,7 +253,7 @@
               </p>
             </div>
           </div>
-          <div class="contact-faq__faq faq-wrapper__item faq">
+          <div class="faq-wrapper__item faq">
             <div class="faq__question open">
               <h2>ここに質問が入ります。</h2>
             </div>
