--- a/src/contact-form-success.html
+++ b/src/contact-form-success.html
@@ -38,7 +38,7 @@
 </head>
 
 <body>
-  <header class="no-page__header header">
+  <header class="header">
     <!--SP-hamburger-header-->
     <div class="header__inner">
       <a href="index.html" class="header__logo"><img src="./assets/images/common/logo.png" alt="コードアップスのロゴ" /></a>
