--- a/src/contact-form.html
+++ b/src/contact-form.html
@@ -39,7 +39,7 @@
 </head>
 
 <body>
-  <header class="no-page__header header">
+  <header class="header">
     <!--SP-hamburger-header-->
     <div class="header__inner">
       <a href="index.html" class="header__logo"><img src="./assets/images/common/logo.png" alt="コードアップスのロゴ" /></a>
@@ -212,19 +212,19 @@
             <label class="contact-form__label">お問い合わせ項目<span>必須</span></label>
             <div class="contact-form__checks">
               <div class="contact-form__check">
-                <input type="checkbox" name="diving" id="license-diving" class="contact-form__checkbox" />
+                <input type="checkbox" name="diving" id="license-diving" />
                 <label for="license-diving">ダイビング講習について</label>
               </div>
               <div class="contact-form__check">
-                <input type="checkbox" name="fun-diving" id="fun-diving" class="contact-form__checkbox" />
+                <input type="checkbox" name="fun-diving" id="fun-diving" />
                 <label for="fun-diving">ファンダイビングについて</label>
               </div>
               <div class="contact-form__check">
-                <input type="checkbox" name="diving" id="trial-diving" class="contact-form__checkbox" />
+                <input type="checkbox" name="diving" id="trial-diving" />
                 <label for="trial-diving">体験ダイビングについて</label>
               </div>
               <div class="contact-form__check">
-                <input type="checkbox" name="diving" id="special-diving" class="contact-form__checkbox" />
+                <input type="checkbox" name="diving" id="special-diving" />
                 <label for="special-diving">スペシャルダイビングについて</label>
               </div>
             </div>
@@ -244,7 +244,7 @@
             <textarea name="content" class="contact-form__textarea"></textarea>
           </div>
           <div class="contact-form__agreement">
-            <input type="checkbox" name="agreement" id="agreement" class="contact-form__checkbox" />
+            <input type="checkbox" name="agreement" id="agreement" />
             <label for="agreement">個人情報の取り扱いについて同意のうえ<wbr />送信します。</label>
           </div>
           <div class="contact-form__btn-wrapper">
