--- a/src/price.html
+++ b/src/price.html
@@ -191,7 +191,7 @@
     <section class="price price-wrapper">
       <div class="price__inner inner">
         <div class="price__menu-wrapper menus">
-          <div class="price__menu menus__item menu" id="license-price">
+          <div class="menus__item menu" id="license-price">
             <div class="menu__title-wrapper">
               <h2 class="menu__title">ライセンス取得</h2>
               <img class="menu__title-img" src="./assets/images/common/price-deco.png" alt="クジラのアイコンイラスト" />
@@ -221,7 +221,7 @@
               </tbody>
             </table>
           </div>
-          <div class="price__menu menus__item menu" id="trial-price">
+          <div class="menus__item menu" id="trial-price">
             <div class="menu__title-wrapper">
               <h2 class="menu__title">体験ダイビング</h2>
               <img class="menu__title-img" src="./assets/images/common/price-deco.png" alt="クジラのアイコンイラスト" />
@@ -258,7 +258,7 @@
               </tbody>
             </table>
           </div>
-          <div class="price__menu menus__item menu" id="fun-price">
+          <div class="menus__item menu" id="fun-price">
             <div class="menu__title-wrapper">
               <h2 class="menu__title">ファンダイビング</h2>
               <img class="menu__title-img" src="./assets/images/common/price-deco.png" alt="クジラのアイコンイラスト" />
@@ -295,7 +295,7 @@
               </tbody>
             </table>
           </div>
-          <div class="price__menu menus__item menu" id="special-price">
+          <div class="menus__item menu" id="special-price">
             <div class="menu__title-wrapper">
               <h2 class="menu__title">スペシャルダイビング</h2>
               <img class="menu__title-img" src="./assets/images/common/price-deco.png" alt="クジラのアイコンイラスト" />
