--- a/src/voice.html
+++ b/src/voice.html
@@ -39,7 +39,7 @@
 </head>
 
 <body>
-  <header class="no-page__header header">
+  <header class="header">
     <!--SP-hamburger-header-->
     <div class="header__inner">
       <a href="index.html" class="header__logo"><img src="./assets/images/common/logo.png" alt="コードアップスのロゴ" /></a>
@@ -192,10 +192,10 @@
     <section class="voice voice-wrapper">
       <div class="voice__inner inner">
         <div class="voice__tabs tabs">
-          <a href="#" class="tabs__item tab">ALL</a>
-          <a href="#" class="tabs__item tab">ライセンス講習</a>
-          <a href="#" class="tabs__item tab">ファンダイビング</a>
-          <a href="#" class="tabs__item tab">体験ダイビング</a>
+          <a href="#" class="tabs__item tab js-active" data-tab="all">ALL</a>
+          <a href="#" class="tabs__item tab" data-tab="license-voice">ライセンス講習</a>
+          <a href="#" class="tabs__item tab" data-tab="fun-voice">ファンダイビング</a>
+          <a href="#" class="tabs__item tab" data-tab="trial-voice">体験ダイビング</a>
         </div>
         <div class="voice__cards-inner">
           <div class="voice__cards voice-cards">
