--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
 </head>
 
 <body>
-  <!--loading
+  <!--loading-->
   <div class="js-loading">
     <div class="js-loading__start">
       <div class="js-loading__texts js-loading__texts--green">
@@ -50,19 +50,19 @@
         <p class="js-loading__sub-text">into the ocean</p>
       </div>
     </div>
-    <div class="js-loading__middle">
+    <!--<div class="js-loading__middle">
       <div class="js-loading__left"></div>
       <div class="js-loading__right"></div>
-    </div>
+    </div>-->
     <div class="js-loading__last">
       <div class="js-loading__texts">
         <h2 class="js-loading__main-text">DIVING</h2>
         <p class="js-loadingr__sub-text">into the ocean</p>
       </div>
     </div>
-  </div>-->
+  </div>
   <!--header-->
-  <header class="no-page__header header">
+  <header class="header">
     <!--SP-hamburger-header-->
     <div class="header__inner">
       <h1 class="header__logo"><a href="index.html"><img src="./assets/images/common/logo.png" alt="コードアップスのロゴ" /></a>
