--- a/src/index.html
+++ b/src/index.html
@@ -50,10 +50,10 @@
         <p class="js-loading__sub-text">into the ocean</p>
       </div>
     </div>
-    <!--<div class="js-loading__middle">
+    <div class="js-loading__middle">
       <div class="js-loading__left"></div>
       <div class="js-loading__right"></div>
-    </div>-->
+    </div>
     <div class="js-loading__last">
       <div class="js-loading__texts">
         <h2 class="js-loading__main-text">DIVING</h2>
