--- a/src/blog-article.html
+++ b/src/blog-article.html
@@ -260,13 +260,13 @@
                     </a>
                   </div>
                 </section>
-                <section class="sidebar__reviews ">
+                <section class="sidebar__review">
                   <h2 class="sidebar__title">口コミ</h2>
-                  <a href="#" class="sidebar__reviews-card">
-                    <div class="sidebar__reviews-img"><img src="./assets/images/common/sidebar-voice.png" alt="" />
+                  <a href="#" class="sidebar__review-card review">
+                    <div class="review__img"><img src="./assets/images/common/sidebar-voice.png" alt="口コミを投稿したお客様" />
                     </div>
-                    <p class="sidebar__reviews-info">30代(カップル)</p>
-                    <h3 class="sidebar__reviews-title">ここにタイトルが入ります。ここにタイトル</h3>
+                    <p class="review__info">30代(カップル)</p>
+                    <h3 class="review__title">ここにタイトルが入ります。ここにタイトル</h3>
                   </a>
                   <div class="sidebar__btn-wrapper">
                     <a href="./voice.html" class="btn">View more
@@ -276,41 +276,44 @@
                 </section>
                 <section class="sidebar__campaign">
                   <h2 class="sidebar__title">キャンペーン</h2>
-                  <div class="sidebar__campaign-cards campaign-cards">
-                    <a href="#" class="campaign-cards__item campaign-card">
-                      <figure class="campaign-card__img campaign-card__img--side">
-                        <img src="./assets/images/common/campaign1.png" alt="色鮮やかな魚たちの写真" />
-                      </figure>
-                      <div class="campaign-card__body campaign-card__body--side">
-                        <div class="campaign-card__title-wrapper">
-                          <h3 class="campaign-card__title campaign-card__title--side">ライセンス取得</h3>
+                  <ul class="sidebar__campaign-cards campaign-cards">
+                    <li class="campaign-cards__item campaign-card"><a href="#">
+                        <figure class="campaign-card__img campaign-card__img--side">
+                          <img src="./assets/images/common/campaign1.png" alt="色鮮やかな魚たちの写真" />
+                        </figure>
+                        <div class="campaign-card__body campaign-card__body--side">
+                          <div class="campaign-card__title-wrapper">
+                            <h3 class="campaign-card__title campaign-card__title--side">ライセンス取得</h3>
+                          </div>
                         </div>
-                      </div>
-                      <div class="campaign-card__contents">
-                        <p class="campaign-card__text campaign-card__text--side">全部コミコミ(お一人様)</p>
-                        <div class="campaign-card__price-wrapper campaign-card__price-wrapper--side">
-                          <p class="campaign-card__pre-price campaign-card__pre-price--side">¥56,000</p>
-                          <p class="campaign-card__after-price campaign-card__after-price--side">¥46,000</p>
+                        <div class="campaign-card__contents">
+                          <p class="campaign-card__text campaign-card__text--side">全部コミコミ(お一人様)</p>
+                          <div class="campaign-card__price-wrapper campaign-card__price-wrapper--side">
+                            <p class="campaign-card__pre-price campaign-card__pre-price--side">¥56,000</p>
+                            <p class="campaign-card__after-price campaign-card__after-price--side">¥46,000</p>
+                          </div>
                         </div>
-                      </div>
-                    </a><a href="#" class="campaign-cards__item campaign-card">
-                      <figure class="campaign-card__img campaign-card__img--side">
-                        <img src="./assets/images/common/campaign2.png" alt="船とエメラルドグリーンのビーチ" />
-                      </figure>
-                      <div class="campaign-card__body campaign-card__body--side">
-                        <div class="campaign-card__title-wrapper">
-                          <h3 class="campaign-card__title campaign-card__title--side">貸切体験ダイビング</h3>
+                      </a>
+                    </li>
+                    <li class="campaign-cards__item campaign-card"><a href="#">
+                        <figure class="campaign-card__img campaign-card__img--side">
+                          <img src="./assets/images/common/campaign2.png" alt="船とエメラルドグリーンのビーチ" />
+                        </figure>
+                        <div class="campaign-card__body campaign-card__body--side">
+                          <div class="campaign-card__title-wrapper">
+                            <h3 class="campaign-card__title campaign-card__title--side">貸切体験ダイビング</h3>
+                          </div>
                         </div>
-                      </div>
-                      <div class="campaign-card__contents">
-                        <p class="campaign-card__text campaign-card__text--side">全部コミコミ(お一人様)</p>
-                        <div class="campaign-card__price-wrapper campaign-card__price-wrapper--side">
-                          <p class="campaign-card__pre-price campaign-card__pre-price--side">¥24,000</p>
-                          <p class="campaign-card__after-price campaign-card__after-price--side">¥18,000</p>
+                        <div class="campaign-card__contents">
+                          <p class="campaign-card__text campaign-card__text--side">全部コミコミ(お一人様)</p>
+                          <div class="campaign-card__price-wrapper campaign-card__price-wrapper--side">
+                            <p class="campaign-card__pre-price campaign-card__pre-price--side">¥24,000</p>
+                            <p class="campaign-card__after-price campaign-card__after-price--side">¥18,000</p>
+                          </div>
                         </div>
-                      </div>
-                    </a>
-                  </div>
+                      </a>
+                    </li>
+                  </ul>
                   <div class="sidebar__btn-wrapper">
                     <a href="./campaign.html" class="btn">View more
                       <span></span>
@@ -320,13 +323,13 @@
                 <section class="sidebar__archive ">
                   <h2 class="sidebar__title">アーカイブ</h2>
                   <div class="sidebar__archive-content">
-                    <div class="sidebar__archive-year">2023</div>
-                    <div class="sidebar__archive-months">
-                      <a href="#" class="sidebar__archive-month">3月</a>
-                      <a href="#" class="sidebar__archive-month">2月</a>
-                      <a href="#" class="sidebar__archive-month">1月</a>
+                    <div class="sidebar__archive-year archive-year">2023</div>
+                    <div class="archive-year__item archive-months">
+                      <a href="#" class="archive-months__item archive-month">3月</a>
+                      <a href="#" class="archive-months__item archive-month">2月</a>
+                      <a href="#" class="archive-months__item archive-month">1月</a>
                     </div>
-                    <div class="sidebar__archive-year">2022</div>
+                    <div class="sidebar__archive-year archive-year">2022</div>
                   </div>
                 </section>
               </aside>
