--- a/src/voice.html
+++ b/src/voice.html
@@ -191,15 +191,15 @@
     </section>
     <section class="voice voice-wrapper">
       <div class="voice__inner inner">
-        <div class="voice__tabs tabs">
-          <a href="#" class="tabs__item tab js-active" data-tab="all">ALL</a>
-          <a href="#" class="tabs__item tab" data-tab="license-voice">ライセンス講習</a>
-          <a href="#" class="tabs__item tab" data-tab="fun-voice">ファンダイビング</a>
-          <a href="#" class="tabs__item tab" data-tab="trial-voice">体験ダイビング</a>
-        </div>
+        <ul class="campaign__tabs tabs">
+          <li class="tabs__item tab js-active"><a href="#">ALL</a></li>
+          <li class="tabs__item tab"><a href="#">ライセンス講習</a></li>
+          <li class="tabs__item tab"><a href="#">ファンダイビング</a></li>
+          <li class="tabs__item tab"><a href="#">体験ダイビング</a></li>
+        </ul>
         <div class="voice__cards-inner">
-          <div class="voice__cards voice-cards">
-            <div class="voice-cards__item voice-card">
+          <ul class="voice__cards voice-cards">
+            <li class="voice-cards__item voice-card">
               <div class="voice-card__info">
                 <div class="voice-card__customer-data-wrapper">
                   <div class="voice-card__customer-data">
@@ -218,8 +218,8 @@
                 ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />
                 ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。
               </p>
-            </div>
-            <div class="voice-cards__item voice-card">
+            </li>
+            <li class="voice-cards__item voice-card">
               <div class="voice-card__info">
                 <div class="voice-card__customer-data-wrapper">
                   <div class="voice-card__customer-data">
@@ -238,8 +238,8 @@
                 ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />
                 ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。
               </p>
-            </div>
-            <div class="voice-cards__item voice-card">
+            </li>
+            <li class="voice-cards__item voice-card">
               <div class="voice-card__info">
                 <div class="voice-card__customer-data-wrapper">
                   <div class="voice-card__customer-data">
@@ -258,8 +258,8 @@
                 ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />
                 ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。
               </p>
-            </div>
-            <div class="voice-cards__item voice-card">
+            </li>
+            <li class="voice-cards__item voice-card">
               <div class="voice-card__info">
                 <div class="voice-card__customer-data-wrapper">
                   <div class="voice-card__customer-data">
@@ -278,8 +278,8 @@
                 ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />
                 ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。
               </p>
-            </div>
-            <div class="voice-cards__item voice-card">
+            </li>
+            <li class="voice-cards__item voice-card">
               <div class="voice-card__info">
                 <div class="voice-card__customer-data-wrapper">
                   <div class="voice-card__customer-data">
@@ -298,8 +298,8 @@
                 ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />
                 ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。
               </p>
-            </div>
-            <div class="voice-cards__item voice-card">
+            </li>
+            <li class="voice-cards__item voice-card">
               <div class="voice-card__info">
                 <div class="voice-card__customer-data-wrapper">
                   <div class="voice-card__customer-data">
@@ -318,8 +318,8 @@
                 ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />
                 ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。
               </p>
-            </div>
-          </div>
+            </li>
+          </ul>
           <div class="voice__pager-wrapper">
             <div class="voice__pager pager">
               <a href="#" class="pager__before">
@@ -329,14 +329,14 @@
                     stroke-linejoin="round" />
                 </svg>
               </a>
-              <div class="pager__number-wrapper">
-                <a href="#" class="pager__number">1</a>
-                <a href="#" class="pager__number">2</a>
-                <a href="#" class="pager__number">3</a>
-                <a href="#" class="pager__number">4</a>
-                <a href="#" class="pager__number">5</a>
-                <a href="#" class="pager__number">6</a>
-              </div>
+              <ul class="pager__number-wrapper">
+                <li class="pager__number"><a href="#">1</a></li>
+                <li class="pager__number"><a href="#">2</a></li>
+                <li class="pager__number"><a href="#">3</a></li>
+                <li class="pager__number"><a href="#">4</a></li>
+                <li class="pager__number"><a href="#">5</a></li>
+                <li class="pager__number"><a href="#">6</a></li>
+              </ul>
               <a href="#" class="pager__after">
                 <svg class="pager__svg" width="10" height="18" viewBox="0 0 10 18" fill="none"
                   xmlns="http://www.w3.org/2000/svg">
