--- a/src/campaign.html
+++ b/src/campaign.html
@@ -194,15 +194,15 @@
     </section>
     <section class="campaign campaign-wrapper">
       <div class="campaign__inner inner">
-        <div class="campaign__tabs tabs">
-          <a href="#" class="tabs__item tab js-active">ALL</a>
-          <a href="#" class="tabs__item tab">ライセンス講習</a>
-          <a href="#" class="tabs__item tab">ファンダイビング</a>
-          <a href="#" class="tabs__item tab">体験ダイビング</a>
-        </div>
+        <ul class="campaign__tabs tabs">
+          <li class="tabs__item tab js-active"><a href="#">ALL</a></li>
+          <li class="tabs__item tab"><a href="#">ライセンス講習</a></li>
+          <li class="tabs__item tab"><a href="#">ファンダイビング</a></li>
+          <li class="tabs__item tab"><a href="#">体験ダイビング</a></li>
+        </ul>
         <div class="campaign__cards-inner">
-          <div class="campaign__cards">
-            <div class="campaign__cards-item campaign-card" id="license-campaign">
+          <ul class="campaign__cards">
+            <li class="campaign__cards-item campaign-card" id="license-campaign">
               <figure class="campaign-card__img">
                 <img src="./assets/images/common/campaign1.png" alt="色鮮やかな魚たちの写真" />
               </figure>
@@ -229,8 +229,8 @@
                   </a>
                 </div>
               </div>
-            </div>
-            <div class="campaign-card" id="trial-campaign">
+            </li>
+            <li class="campaign-card" id="trial-campaign">
               <figure class="campaign-card__img">
                 <img src="./assets/images/common/campaign2.png" alt="船とエメラルドグリーンのビーチ" />
               </figure>
@@ -257,8 +257,8 @@
                   </a>
                 </div>
               </div>
-            </div>
-            <div class="campaign-card" id="trial-campaign">
+            </li>
+            <li class="campaign-card" id="trial-campaign">
               <figure class="campaign-card__img">
                 <img src="./assets/images/common/campaign3.png" alt="小さなクラゲの大群" />
               </figure>
@@ -285,8 +285,8 @@
                   </a>
                 </div>
               </div>
-            </div>
-            <div class="campaign-card" id="fun-campaign">
+            </li>
+            <li class="campaign-card" id="fun-campaign">
               <figure class="campaign-card__img">
                 <img src="./assets/images/common/campaign4.png" alt="ダイビングを楽しむ２人組" />
               </figure>
@@ -313,8 +313,8 @@
                   </a>
                 </div>
               </div>
-            </div>
-          </div>
+            </li>
+          </ul>
         </div>
       </div>
       <div class="campaign__pager-wrapper pager-wrapper">
@@ -326,14 +326,14 @@
                 stroke-linejoin="round" />
             </svg>
           </a>
-          <div class="pager__number-wrapper">
-            <a href="#" class="pager__number">1</a>
-            <a href="#" class="pager__number">2</a>
-            <a href="#" class="pager__number">3</a>
-            <a href="#" class="pager__number">4</a>
-            <a href="#" class="pager__number">5</a>
-            <a href="#" class="pager__number">6</a>
-          </div>
+          <ul class="pager__number-wrapper">
+            <li class="pager__number"><a href="#">1</a></li>
+            <li class="pager__number"><a href="#">2</a></li>
+            <li class="pager__number"><a href="#">3</a></li>
+            <li class="pager__number"><a href="#">4</a></li>
+            <li class="pager__number"><a href="#">5</a></li>
+            <li class="pager__number"><a href="#">6</a></li>
+          </ul>
           <a href="#" class="pager__after"><svg class="pager__svg" width="10" height="18" viewBox="0 0 10 18"
               fill="none" xmlns="http://www.w3.org/2000/svg">
               <path class="pager__path" d="M1 1L9 9L1 17" stroke="#408F95" stroke-linecap="round"
